WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75709
Fullscreen video controller can't be dragged the first time I enter fullscreen
https://bugs.webkit.org/show_bug.cgi?id=75709
Summary
Fullscreen video controller can't be dragged the first time I enter fullscreen
Jer Noble
Reported
2012-01-06 09:29:22 PST
(From Jeff Miller:) I can't drag the fullscreen video controller the first time I enter fullscreen, but it works if I exit and re-enter fullscreen. 1. Go to <
http://www.apple.com/ipad/
>. 2. Start playing the iPad 2 video. 3. Click on the fullscreen button. 4. Click on a non-control area of the fullscreen video controller and attempt to drag it. 5. Bug: I can't drag the controller vertically or horizontally. 6. Click on the fullscreen button to exit fullscreen (I left the video playing). 7. Click on the fullscreen button to enter fullscreen again. 8. Click on a non-control area of the fullscreen video controller and attempt to drag it. 9. I can now drag controller vertically, but not horizontally (which is covered by
bug #75200
). 
Attachments
Patch
(2.92 KB, patch)
2012-01-06 09:35 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-01-06 09:29:34 PST
<
rdar://problem/10652194
>
Jer Noble
Comment 2
2012-01-06 09:29:43 PST
Aha, it's because the controller isn't created until after the <video> enters full-screen mode, so "enteredFullScreen()" is never called, and the controls are never made draggable.
Jer Noble
Comment 3
2012-01-06 09:35:43 PST
Created
attachment 121440
[details]
Patch
Jer Noble
Comment 4
2012-01-06 11:38:58 PST
Committed
r104306
: <
http://trac.webkit.org/changeset/104306
>
Jer Noble
Comment 5
2012-01-10 10:20:52 PST
***
Bug 75234
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug