third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -3485,6 +3485,8 @@ bool HTMLMediaElement::createMediaControls()
 
     controls->setMediaController(m_mediaController ? m_mediaController.get() : static_cast<MediaControllerInterface*>(this));
     controls->reset();
+    if (isFullscreen())
+        controls->enteredFullscreen();
 
     ensureShadowRoot()->appendChild(controls, ec);
     return true;
